# Vanaddy

./: .gitignore  Cargo.toml  README.md
benches/: generation.rs
docs/superpowers/plans/: 2026-04-11-ratatui-tui.md  2026-04-13-fix-everything.md  2026-04-13-multichain-addy.md  2026-04-13-seed-alignment.md  baseline-bench.txt  final-bench.txt  fix-everything-final-bench.txt  perf-summary.md  post-refactor-bench.txt
docs/superpowers/specs/: 2026-04-10-vanaddy-v2-design.md  2026-04-13-multichain-addy-design.md
src/: app.rs  bip32.rs  main.rs  matcher.rs  seed.rs  slip10.rs  ui.rs
src/chains/: bitcoin.rs  evm.rs  mod.rs  monero.rs  monero_wordlist.rs  solana.rs  ton.rs  ton_cell.rs  ton_mnemonic.rs
vanaddy/: Cargo.toml  README.md  vanity_wallets.csv
vanaddy/docs/superpowers/specs/: 2026-04-11-ratatui-tui-design.md
vanaddy/src/: main.rs
