[package]
name = "vanaddy"
version = "0.6.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
libsecp256k1 = "0.6"
sha3 = "0.9"
rayon = "1.8"
csv = "1.3"
bs58 = "0.4"
hex = "0.4"
tiny-bip39 = "0.8"
num_cpus = "1.16"
ring = "0.17"
ratatui = "0.29"
crossterm = "0.28"
ripemd = "0.1"
bech32 = "0.9"
sha2 = "0.10"
base64 = "0.22"
curve25519-dalek = "4"
tiny-keccak = { version = "2", features = ["keccak"] }
rand = "0.8"
crc32fast = "1.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "generation"
harness = false
