[package]
name = "vanaddy"
version = "0.4.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
libsecp256k1 = "0.6"
sha3 = "0.9"
rayon = "1.8"
csv = "1.3"
bs58 = "0.4"
rand = "0.7"
hex = "0.4"
tiny-bip39 = "0.8"
num_cpus = "1.16"
ring = "0.17"
ratatui = "0.29"
crossterm = "0.28"
